[package]
name = "discogs_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11.18", features = ["blocking", "multipart", "cookies"] }
scraper = "0.12.0"
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tabled = { version = "0.12.2", features = ["color"] }
terminal_size = "0.2.6"
